--- a/css/scss/_utils.scss
+++ b/css/scss/_utils.scss
@@ -11,7 +11,7 @@ h6 {
     font-family: "Playfair Display";
 }
 
-.pop {
+p {
     font-family: "Open Sans";
 }
 
@@ -22,4 +22,58 @@ body {
 
 a {
     text-decoration: none !important;
+}
+
+button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+button.slide {
+    font-size: 16px;
+    cursor: pointer;
+    background: white;
+    border: none;
+    outline: none;
+    position: relative;
+    transition: 0.3s;
+    color: $main;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+    & span.text {
+        z-index: 2;
+        position: relative;
+        transition: 0.5s;
+        font-weight: bold;
+    }
+    &::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: $main;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: 0.3s;
+        border-radius: 0.25rem;
+    }
+    &:hover::before {
+        transform: scale(1);
+        transform-origin: right;
+    }
+    &:hover {
+        color: white;
+    }
+}
+
+section {
+    padding: 6rem;
+    position: relative;
+    &::before {
+        position: absolute;
+        content: "";
+    }
 }
