--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h6 {
   font-family: "Playfair Display";
 }
 
-.pop {
+p {
   font-family: "Open Sans";
 }
 
@@ -18,6 +18,73 @@ body {
 
 a {
   text-decoration: none !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+button.slide {
+  font-size: 16px;
+  cursor: pointer;
+  background: white;
+  border: none;
+  outline: none;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #2e54bf;
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+button.slide span.text {
+  z-index: 2;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: bold;
+}
+
+button.slide::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2e54bf;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0.25rem;
+}
+
+button.slide:hover::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+button.slide:hover {
+  color: white;
+}
+
+section {
+  padding: 6rem;
+  position: relative;
+}
+
+section::before {
+  position: absolute;
+  content: "";
 }
 
 h1,
@@ -29,7 +96,7 @@ h6 {
   font-family: "Playfair Display";
 }
 
-.pop {
+p {
   font-family: "Open Sans";
 }
 
@@ -40,6 +107,73 @@ body {
 
 a {
   text-decoration: none !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+button.slide {
+  font-size: 16px;
+  cursor: pointer;
+  background: white;
+  border: none;
+  outline: none;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #2e54bf;
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+button.slide span.text {
+  z-index: 2;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: bold;
+}
+
+button.slide::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2e54bf;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0.25rem;
+}
+
+button.slide:hover::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+button.slide:hover {
+  color: white;
+}
+
+section {
+  padding: 6rem;
+  position: relative;
+}
+
+section::before {
+  position: absolute;
+  content: "";
 }
 
 header {
@@ -153,31 +287,58 @@ header {
 }
 
 .hero_slider .content h1 {
-  font-weight: 600;
   font-size: 85px;
 }
 
 .hero_slider .content p {
-  max-width: 60%;
+  max-width: 55%;
   font-size: 22px;
   line-height: 1.5;
 }
 
-.hero_slider .content button.slide {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display";
+}
+
+p {
+  font-family: "Open Sans";
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+button.slide {
   font-size: 16px;
   cursor: pointer;
   background: white;
   border: none;
   outline: none;
   position: relative;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
   color: #2e54bf;
-  -webkit-box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.13);
-          box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.13);
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
 }
 
-.hero_slider .content button.slide span.text {
+button.slide span.text {
   z-index: 2;
   position: relative;
   -webkit-transition: 0.5s;
@@ -185,7 +346,7 @@ header {
   font-weight: bold;
 }
 
-.hero_slider .content button.slide::before {
+button.slide::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -198,19 +359,385 @@ header {
           transform: scaleX(0);
   -webkit-transform-origin: left;
           transform-origin: left;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
   border-radius: 0.25rem;
 }
 
-.hero_slider .content button.slide:hover::before {
+button.slide:hover::before {
   -webkit-transform: scale(1);
           transform: scale(1);
   -webkit-transform-origin: right;
           transform-origin: right;
 }
 
-.hero_slider .content button.slide:hover {
+button.slide:hover {
   color: white;
+}
+
+section {
+  padding: 6rem;
+  position: relative;
+}
+
+section::before {
+  position: absolute;
+  content: "";
+}
+
+section#about {
+  color: white;
+}
+
+section#about::before {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #2e54bf;
+  z-index: 1;
+  opacity: 0.4;
+}
+
+section#about img.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  -webkit-filter: brightness(40%);
+          filter: brightness(40%);
+}
+
+section#about .content {
+  position: relative;
+  z-index: 2;
+}
+
+section#about .content h1 {
+  font-size: 40px;
+}
+
+section#about .content p {
+  max-width: 600px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 40px;
+  text-align: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display";
+}
+
+p {
+  font-family: "Open Sans";
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+button.slide {
+  font-size: 16px;
+  cursor: pointer;
+  background: white;
+  border: none;
+  outline: none;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #2e54bf;
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+button.slide span.text {
+  z-index: 2;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: bold;
+}
+
+button.slide::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2e54bf;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0.25rem;
+}
+
+button.slide:hover::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+button.slide:hover {
+  color: white;
+}
+
+section {
+  padding: 6rem;
+  position: relative;
+}
+
+section::before {
+  position: absolute;
+  content: "";
+}
+
+section#start {
+  background: #f5f5f5;
+}
+
+section#start h1 {
+  color: #2e54bf;
+}
+
+section#start p {
+  max-width: 600px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 40px;
+  text-align: center;
+  color: #555555;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display";
+}
+
+p {
+  font-family: "Open Sans";
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+button.slide {
+  font-size: 16px;
+  cursor: pointer;
+  background: white;
+  border: none;
+  outline: none;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #2e54bf;
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+button.slide span.text {
+  z-index: 2;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: bold;
+}
+
+button.slide::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2e54bf;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0.25rem;
+}
+
+button.slide:hover::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+button.slide:hover {
+  color: white;
+}
+
+section {
+  padding: 6rem;
+  position: relative;
+}
+
+section::before {
+  position: absolute;
+  content: "";
+}
+
+div#sevices .header h1 {
+  padding: 4rem;
+  background: #2e54bf;
+  color: white;
+  font-weight: 600;
+}
+
+div#sevices .grid .grid_item {
+  width: 320px;
+  height: 500px;
+  padding: 3em 2em;
+  font-size: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  -webkit-transition: -webkit-box-shadow 0.3s ease-out;
+  transition: -webkit-box-shadow 0.3s ease-out;
+  transition: box-shadow 0.3s ease-out;
+  transition: box-shadow 0.3s ease-out, -webkit-box-shadow 0.3s ease-out;
+  overflow: hidden;
+}
+
+div#sevices .grid .grid_item .icon {
+  font-size: 7em;
+  color: #2e54bf;
+  margin-bottom: 1.625rem;
+}
+
+div#sevices .grid .grid_item .content {
+  color: #444;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+div#sevices .grid .grid_item .content h3 {
+  font-weight: bold;
+  font-size: 3em;
+  margin-bottom: 20px;
+}
+
+div#sevices .grid .grid_item .content p {
+  font-size: 1.8em;
+}
+
+div#sevices .grid .grid_item .cta button {
+  position: relative;
+  margin-top: auto;
+  display: inline;
+  float: right;
+  z-index: 3;
+  font-weight: bolder;
+  background: none;
+  font-size: 2em;
+  padding: 0.5em 1em;
+}
+
+div#sevices .grid .grid_item .cta button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 4em;
+  height: 100%;
+  background: #f5f5f5;
+  z-index: 1;
+}
+
+div#sevices .grid .grid_item .cta button a {
+  position: relative;
+  z-index: 2;
+  color: #444;
+}
+
+div#sevices .grid .grid_item::before {
+  position: absolute;
+  content: "";
+  width: 60%;
+  border-radius: 0px 0px 5px 5px;
+  height: 8px;
+  background: #2e54bf;
+  top: 0;
+  left: 20%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+
+div#sevices .grid .grid_item:hover {
+  -webkit-box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.15);
+}
+
+div#sevices .grid .grid_item:hover::before {
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
 }
 /*# sourceMappingURL=style.css.map */
