--- a/css/style.css
+++ b/css/style.css
@@ -636,6 +636,18 @@ div#sevices .header h1 {
   font-weight: 600;
 }
 
+div#sevices .grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (320px)[auto-fit];
+      grid-template-columns: repeat(auto-fit, 320px);
+  gap: 30px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  max-width: 1450px;
+  margin: auto;
+}
+
 div#sevices .grid .grid_item {
   width: 320px;
   height: 500px;
@@ -697,6 +709,18 @@ div#sevices .grid .grid_item .cta button {
   background: none;
   font-size: 2em;
   padding: 0.5em 1em;
+  -webkit-transition: 0.3s ease-out 0.3s;
+  transition: 0.3s ease-out 0.3s;
+  border-radius: 5px;
+}
+
+div#sevices .grid .grid_item .cta button span {
+  display: inline-block;
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+  position: relative;
+  top: 2px;
+  left: 5px;
 }
 
 div#sevices .grid .grid_item .cta button::before {
@@ -704,16 +728,34 @@ div#sevices .grid .grid_item .cta button::before {
   position: absolute;
   top: 0;
   left: 0;
-  width: 4em;
+  width: 3.5em;
   height: 100%;
   background: #f5f5f5;
   z-index: 1;
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
 }
 
 div#sevices .grid .grid_item .cta button a {
   position: relative;
   z-index: 2;
   color: #444;
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+
+div#sevices .grid .grid_item .cta button:hover::before {
+  left: calc(100% - 3.5em);
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+}
+
+div#sevices .grid .grid_item .cta button:hover {
+  background: #2e54bf;
+}
+
+div#sevices .grid .grid_item .cta button:hover a {
+  color: white;
 }
 
 div#sevices .grid .grid_item::before {
@@ -729,6 +771,25 @@ div#sevices .grid .grid_item::before {
           transform: translateY(-100%);
   -webkit-transition: 0.3s ease-out;
   transition: 0.3s ease-out;
+  pointer-events: none;
+}
+
+div#sevices .grid .grid_item::after {
+  position: absolute;
+  content: "";
+  width: 400px;
+  height: 400px;
+  background: #2e54bf;
+  top: 60%;
+  left: 40%;
+  opacity: 0.1;
+  border-radius: 50%;
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+  pointer-events: none;
+  -webkit-transform: scale(0.4);
+          transform: scale(0.4);
+  opacity: 0;
 }
 
 div#sevices .grid .grid_item:hover {
@@ -739,5 +800,288 @@ div#sevices .grid .grid_item:hover {
 div#sevices .grid .grid_item:hover::before {
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
+}
+
+div#sevices .grid .grid_item:hover::after {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 0.1;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display";
+}
+
+p {
+  font-family: "Open Sans";
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+button.slide {
+  font-size: 16px;
+  cursor: pointer;
+  background: white;
+  border: none;
+  outline: none;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #2e54bf;
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+button.slide span.text {
+  z-index: 2;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: bold;
+}
+
+button.slide::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2e54bf;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0.25rem;
+}
+
+button.slide:hover::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+button.slide:hover {
+  color: white;
+}
+
+section {
+  padding: 6rem;
+  position: relative;
+}
+
+section::before {
+  position: absolute;
+  content: "";
+}
+
+section#posts h1 {
+  color: #2e54bf;
+}
+
+section#posts .grid {
+  margin-top: 4rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  gap: 50px;
+}
+
+section#posts .grid img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 50px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display";
+}
+
+p {
+  font-family: "Open Sans";
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+button.slide {
+  font-size: 16px;
+  cursor: pointer;
+  background: white;
+  border: none;
+  outline: none;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #2e54bf;
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+button.slide span.text {
+  z-index: 2;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: bold;
+}
+
+button.slide::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2e54bf;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0.25rem;
+}
+
+button.slide:hover::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+button.slide:hover {
+  color: white;
+}
+
+section {
+  padding: 6rem;
+  position: relative;
+}
+
+section::before {
+  position: absolute;
+  content: "";
+}
+
+section#contact {
+  padding: 0;
+  height: 90vh;
+}
+
+section#contact .info {
+  background: #2e54bf;
+  padding: 50px;
+  color: white;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+section#contact .info ul {
+  margin-top: 50px;
+}
+
+section#contact .info ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  margin-bottom: 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+section#contact .info ul li span {
+  font-size: 40px;
+}
+
+section#contact .info ul li p {
+  margin: 0;
+}
+
+section#contact .info .social_links {
+  position: absolute;
+  bottom: 50px;
+  left: 50px;
+}
+
+section#contact .info .social_links span {
+  font-size: 24px;
+  color: white;
+  margin-right: 20px;
+}
+
+section#contact .info::before, section#contact .info::after {
+  content: "";
+  position: absolute;
+}
+
+section#contact .info::before {
+  width: 700px;
+  height: 700px;
+  background: #3760d3;
+  bottom: 0;
+  right: 0;
+  -webkit-transform: translate(50%, 60%);
+          transform: translate(50%, 60%);
+  border-radius: 50%;
+  z-index: 0;
+  pointer-events: none;
+}
+
+section#contact .info::after {
+  width: 250px;
+  height: 250px;
+  background: #678df8;
+  bottom: 0;
+  right: 0;
+  -webkit-transform: translate(-35%, -30%);
+          transform: translate(-35%, -30%);
+  border-radius: 50%;
+  z-index: 0;
+  pointer-events: none;
 }
 /*# sourceMappingURL=style.css.map */
