--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -10,7 +10,7 @@ header {
 #hero {
     position: relative;
     height: 100vh;
-    &::before {
+    span.bg {
         position: absolute;
         width: 50%;
         height: 100vh;
@@ -98,9 +98,116 @@ header {
             font-size: 85px;
         }
         p {
-            max-width: 55%;
+            max-width: 650px;
             font-size: 22px;
             line-height: 1.5;
+        }
+    }
+}
+
+.mobile_nav {
+    display: none;
+    width: 30px;
+    height: 30px;
+    z-index: 100;
+    position: relative;
+    cursor: pointer;
+    line {
+        stroke: $main;
+        stroke-width: 7px;
+        stroke-linecap: round;
+        transition: stroke 0.3s ease-out;
+    }
+}
+
+@media (max-width: 1000px) {
+    .mobile_nav {
+        display: block;
+    }
+
+    nav {
+        position: fixed;
+        width: 100vw;
+        height: 100%;
+        top: 0;
+        left: 100%;
+        opacity: 0;
+        background: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(10px);
+        z-index: 10;
+        justify-content: center;
+
+        ul {
+            flex-direction: column;
+            height: 85vh;
+            justify-content: space-evenly;
+            li.navlinkItem {
+                overflow: hidden;
+                display: block;
+                a {
+                    font-family: "PlayFair Display";
+                    font-size: 26px;
+                    padding: 10px 16px;
+                    display: inline-block;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    opacity: 0;
+                    &::before {
+                        bottom: 50%;
+                        left: 0;
+                        transform: translateY(50%) scaleX(0);
+                        transition: transform 0.3s ease;
+                        transform-origin: right;
+                    }
+                    &.active::before,
+                    &:hover::before {
+                        transform: translateY(50%) scaleX(1);
+                        transform-origin: left;
+                    }
+                }
+            }
+        }
+    }
+
+    .hero_slider {
+        --offsetX: 50px;
+        --offsetY: 70px;
+        margin-top: 20px;
+        .content {
+            position: relative;
+            z-index: 5;
+            color: white;
+            h1 {
+                font-size: 45px;
+            }
+            p {
+                font-size: 14px;
+                line-height: 1.5;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    #hero {
+        padding: 0px 25px !important;
+    }
+
+    header.px-5 {
+        padding: 1rem 20px !important;
+    }
+    .hero_slider {
+        --offsetX: 0px;
+        --offsetY: 0px;
+        margin-top: 70px;
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            button {
+                font-size: 12px;
+            }
         }
     }
 }
