--- a/css/scss/_services.scss
+++ b/css/scss/_services.scss
@@ -1,6 +1,6 @@
 @import "./utils";
 
-div#sevices {
+div#services {
     .header h1 {
         padding: 4rem;
         background: $main;
@@ -12,10 +12,11 @@ div#sevices {
         grid-template-columns: repeat(auto-fit, 320px);
         gap: 30px;
         justify-content: space-around;
+        align-items: center;
         max-width: 1450px;
         margin: auto;
         .grid_item {
-            width: 320px;
+            width: clamp(250px, 100%, 320px);
             height: 500px;
             padding: 3em 2em;
             font-size: 10px;
@@ -140,6 +141,18 @@ div#sevices {
                     transform: scale(1);
                     opacity: 0.1;
                 }
+            }
+        }
+    }
+}
+
+@media (max-width: 400px) {
+    div#services {
+        .grid {
+            grid-template-columns: 1fr;
+
+            .grid_item {
+                width: 100%;
             }
         }
     }
