--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 @import "./scss/header";
 @import "./scss/about";
 @import "./scss/start";
+@import "./scss/industries";
 @import "./scss/services";
 @import "./scss/posts";
 @import "./scss/contact";
