--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -19,6 +19,9 @@ header {
         top: 0;
         left: 0;
         z-index: -1;
+        transform-origin: left;
+        transform: scaleX(0);
+        opacity: 0;
     }
 }
 
@@ -64,6 +67,7 @@ header {
     left: var(--offsetX);
     right: var(--offsetX);
     bottom: var(--offsetY);
+    clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
 
     .background {
         width: 100%;
@@ -107,8 +111,8 @@ header {
 
 .mobile_nav {
     display: none;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 20px;
     z-index: 100;
     position: relative;
     cursor: pointer;
