--- a/css/scss/_industries.scss
+++ b/css/scss/_industries.scss
@@ -150,14 +150,15 @@ section#industries {
                 font-size: 28px !important;
             }
         }
+    }
+}
+@media (max-width: 360px) {
+    section#industries #slider {
+        margin: 0;
+        min-height: 20vh;
 
-        button {
-            &.next {
-                right: -10%;
-            }
-            &.prev {
-                left: -10%;
-            }
+        .labels {
+            bottom: 20%;
         }
     }
 }
