--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -10,10 +10,11 @@ header {
 #hero {
     position: relative;
     height: 100vh;
+    max-height: 700px;
     span.bg {
         position: absolute;
         width: 50%;
-        height: 100vh;
+        height: 100%;
         background: $main;
         content: "";
         top: 0;
