--- a/css/style.css
+++ b/css/style.css
@@ -1625,6 +1625,9 @@ section#contact {
 
 section#contact .rows {
   min-height: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 section#contact .info {
@@ -1831,6 +1834,12 @@ section#footer {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .rows {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
