Progress at hero slider and blogs posts

--- a/css/scss/_industries.scss
+++ b/css/scss/_industries.scss
@@ -170,3 +170,15 @@ section#industries {
         }
     }
 }
+
+.vbox-title {
+    font-size: 18px !important;
+}
+
+img.vbox-figlio {
+    max-height: 95vh !important;
+}
+
+.vbox-container {
+    overflow: hidden !important;
+}
