--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -5,6 +5,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 70;
 }
 
 #hero {
@@ -214,5 +215,93 @@ header {
                 font-size: 12px;
             }
         }
+    }
+}
+
+.link-drop {
+    position: relative;
+    .dropdown {
+        opacity: 0;
+        position: absolute;
+        z-index: -99;
+        pointer-events: none;
+        transition: all 0.5s ease-out;
+        transform: translateY(20px);
+        min-width: 170px;
+        &::before,
+        &::after {
+            position: absolute;
+            content: "";
+            top: 0;
+        }
+
+        &::before {
+            width: 100%;
+            height: 3px;
+            z-index: 100;
+            background: $main;
+            left: 0;
+        }
+        &::after {
+            width: 0;
+            height: 0;
+            z-index: 100;
+            border: 10px solid transparent;
+            transform: rotate(45deg) translateY(-10px);
+            left: 20px;
+            border-top-color: $main;
+            border-left-color: $main;
+        }
+        ul li a {
+            box-shadow: none;
+            border: none;
+            border-radius: 0px;
+            transition: all 0.5s ease-out;
+            padding: 10px;
+            &::before {
+                width: 3px;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background: $main;
+                transform: scale(1);
+            }
+
+            &:hover {
+                color: white !important;
+                background: $main;
+                &::before {
+                    background: white;
+                }
+            }
+        }
+    }
+
+    &:hover .dropdown {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(12px);
+        z-index: 99;
+        pointer-events: all;
+    }
+}
+
+.hero-slider-wrapper {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+
+    .hero-slider-item {
+        position: absolute;
+        &.active {
+            transform: translateY(0%);
+        }
+    }
+
+    .hero-slider-item.active ~ .hero-slider-item {
+        transform: translateY(-300%);
+    }
+    .hero-slider-item.active + .hero-slider-item {
+        transform: translateY(300%);
     }
 }
