--- a/css/scss/_posts.scss
+++ b/css/scss/_posts.scss
@@ -9,32 +9,77 @@ section#posts {
         margin-top: 4rem;
         display: flex;
         flex-wrap: wrap;
-        gap: 5%;
+        justify-content: center;
+        gap: 50px;
         & > div {
-            display: flex;
-            gap: 20px;
-            flex: 1;
-            flex-wrap: wrap;
-            flex-direction: column;
-            min-width: 150px;
+            width: 300px;
+            height: 300px;
+            position: relative;
+            perspective: 1000px;
         }
-        img {
+        a {
             width: 100%;
-            height: auto;
-        }
+            height: 100%;
+            display: block;
+            transform-style: preserve-3d;
+            transition: transform 0.8s;
+            img,
+            .back {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
 
-        .offset {
-            margin-top: 5%;
+            .back {
+                background: $main;
+                transform: rotateY(180deg);
+                padding: 20px;
+                display: grid;
+                place-items: center;
+                overflow: hidden;
+                & p {
+                    color: white;
+                    text-align: center;
+                    font-size: 30px;
+                    text-decoration: underline;
+                    position: relative;
+                    z-index: 2;
+                }
+
+                &::before {
+                    position: absolute;
+                    content: "";
+                    width: 350px;
+                    height: 350px;
+                    border-radius: 50%;
+                    top: 0;
+                    right: 0;
+                    transform: translate(50%, -50%) scale(0);
+                    background: #3760d3;
+                    transition: transform 0.5s ease-out;
+                }
+
+                &:hover::before {
+                    transform: translate(50%, -50%) scale(1);
+                }
+            }
+
+            &:hover {
+                transform: rotateY(180deg);
+            }
         }
     }
 
-    @media (max-width: 500px) {
+    @media (max-width: 700px) {
         .grid {
-            gap: 1rem;
-            margin-top: 2rem;
-            grid-template-columns: 1fr;
+            gap: 15px;
+            & > div {
+                gap: 15px;
+            }
             img {
-                margin-bottom: 20px;
+                margin-bottom: 0px;
             }
             .offset {
                 margin-top: 0px;
