--- a/css/scss/_services.scss
+++ b/css/scss/_services.scss
@@ -25,6 +25,7 @@ div#services {
             position: relative;
             transition: box-shadow 0.3s ease-out;
             overflow: hidden;
+            box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.05);
 
             .icon {
                 font-size: 7em;
