--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 70;
 }
 
 #hero {
@@ -466,6 +467,111 @@ header {
   }
 }
 
+.link-drop {
+  position: relative;
+}
+
+.link-drop .dropdown {
+  opacity: 0;
+  position: absolute;
+  z-index: -99;
+  pointer-events: none;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  min-width: 170px;
+}
+
+.link-drop .dropdown::before, .link-drop .dropdown::after {
+  position: absolute;
+  content: "";
+  top: 0;
+}
+
+.link-drop .dropdown::before {
+  width: 100%;
+  height: 3px;
+  z-index: 100;
+  background: #2e54bf;
+  left: 0;
+}
+
+.link-drop .dropdown::after {
+  width: 0;
+  height: 0;
+  z-index: 100;
+  border: 10px solid transparent;
+  -webkit-transform: rotate(45deg) translateY(-10px);
+          transform: rotate(45deg) translateY(-10px);
+  left: 20px;
+  border-top-color: #2e54bf;
+  border-left-color: #2e54bf;
+}
+
+.link-drop .dropdown ul li a {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
+  border-radius: 0px;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+  padding: 10px;
+}
+
+.link-drop .dropdown ul li a::before {
+  width: 3px;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #2e54bf;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.link-drop .dropdown ul li a:hover {
+  color: white !important;
+  background: #2e54bf;
+}
+
+.link-drop .dropdown ul li a:hover::before {
+  background: white;
+}
+
+.link-drop:hover .dropdown {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: translateY(12px);
+          transform: translateY(12px);
+  z-index: 99;
+  pointer-events: all;
+}
+
+.hero-slider-wrapper {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.hero-slider-wrapper .hero-slider-item {
+  position: absolute;
+}
+
+.hero-slider-wrapper .hero-slider-item.active {
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+}
+
+.hero-slider-wrapper .hero-slider-item.active ~ .hero-slider-item {
+  -webkit-transform: translateY(-300%);
+          transform: translateY(-300%);
+}
+
+.hero-slider-wrapper .hero-slider-item.active + .hero-slider-item {
+  -webkit-transform: translateY(300%);
+          transform: translateY(300%);
+}
+
 h1,
 h2,
 h3,
@@ -611,7 +717,7 @@ section#about .content h1 {
 }
 
 section#about .content p {
-  max-width: 600px;
+  max-width: 800px;
   font-family: Open Sans;
   font-style: normal;
   font-weight: 500;
@@ -1051,6 +1157,18 @@ section#industries #slider #s8:checked ~ .s8 h1 {
   }
 }
 
+.vbox-title {
+  font-size: 18px !important;
+}
+
+img.vbox-figlio {
+  max-height: 95vh !important;
+}
+
+.vbox-container {
+  overflow: hidden !important;
+}
+
 h1,
 h2,
 h3,
@@ -1198,6 +1316,8 @@ div#services .grid .grid_item {
   transition: box-shadow 0.3s ease-out;
   transition: box-shadow 0.3s ease-out, -webkit-box-shadow 0.3s ease-out;
   overflow: hidden;
+  -webkit-box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.05);
 }
 
 div#services .grid .grid_item .icon {
@@ -1468,44 +1588,97 @@ section#posts .grid {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 5%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 50px;
 }
 
 section#posts .grid > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 20px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  min-width: 150px;
+  width: 300px;
+  height: 300px;
+  position: relative;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
 }
 
-section#posts .grid img {
+section#posts .grid a {
   width: 100%;
-  height: auto;
+  height: 100%;
+  display: block;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
 }
 
-section#posts .grid .offset {
-  margin-top: 5%;
+section#posts .grid a img,
+section#posts .grid a .back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-@media (max-width: 500px) {
+section#posts .grid a .back {
+  background: #2e54bf;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  padding: 20px;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+
+section#posts .grid a .back p {
+  color: white;
+  text-align: center;
+  font-size: 30px;
+  text-decoration: underline;
+  position: relative;
+  z-index: 2;
+}
+
+section#posts .grid a .back::before {
+  position: absolute;
+  content: "";
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  top: 0;
+  right: 0;
+  -webkit-transform: translate(50%, -50%) scale(0);
+          transform: translate(50%, -50%) scale(0);
+  background: #3760d3;
+  -webkit-transition: -webkit-transform 0.5s ease-out;
+  transition: -webkit-transform 0.5s ease-out;
+  transition: transform 0.5s ease-out;
+  transition: transform 0.5s ease-out, -webkit-transform 0.5s ease-out;
+}
+
+section#posts .grid a .back:hover::before {
+  -webkit-transform: translate(50%, -50%) scale(1);
+          transform: translate(50%, -50%) scale(1);
+}
+
+section#posts .grid a:hover {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+@media (max-width: 700px) {
   section#posts .grid {
-    gap: 1rem;
-    margin-top: 2rem;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    gap: 15px;
+  }
+  section#posts .grid > div {
+    gap: 15px;
   }
   section#posts .grid img {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
   }
   section#posts .grid .offset {
     margin-top: 0px;
@@ -1847,6 +2020,178 @@ section#footer {
   section#contact .info {
     min-height: 600px;
     padding: 30px;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display";
+}
+
+p {
+  font-family: "Open Sans";
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100vw;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+button.slide {
+  font-size: 16px;
+  cursor: pointer;
+  background: white;
+  border: none;
+  outline: none;
+  position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #2e54bf;
+  -webkit-box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+button.slide span.text {
+  z-index: 2;
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: bold;
+}
+
+button.slide::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #2e54bf;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0.25rem;
+}
+
+button.slide:hover::before {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+
+button.slide:hover {
+  color: white;
+}
+
+section {
+  padding: 6rem;
+  position: relative;
+}
+
+section::before {
+  position: absolute;
+  content: "";
+}
+
+@media (max-width: 500px) {
+  section {
+    padding: 3.5rem 25px;
+  }
+}
+
+@media (max-width: 1000px) {
+  section .content h1 {
+    font-size: 45px !important;
+  }
+  section .content p {
+    font-size: 14px !important;
+    line-height: 1.5 !important;
+  }
+}
+
+body.industries {
+  background: #2e54bf;
+}
+
+body.industries #hero {
+  background: white;
+}
+
+body.industries main .grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 30% 70%;
+      grid-template-columns: 30% 70%;
+  gap: 50px;
+}
+
+body.industries main .grid img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 45% 50%;
+     object-position: 45% 50%;
+  max-height: 80vh;
+  -webkit-clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+          clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
+}
+
+body.industries main .grid .content {
+  color: white;
+  padding-right: 100px;
+}
+
+body.industries main .grid .content .subheader {
+  font-size: 16px;
+}
+
+body.industries main .grid .content .header {
+  font-size: 32px;
+  font-weight: bold;
+  line-height: 1.5 !important;
+}
+
+body.industries main .grid .content .content_footer {
+  margin-top: 60px;
+}
+
+@media (max-width: 900px) {
+  body.industries main .grid {
+    margin-top: 0 !important;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    gap: 0;
+  }
+  body.industries main .grid .content {
+    padding: 50px 30px;
+  }
+  body.industries main .grid .content .subheader {
+    font-size: 12px;
+  }
+  body.industries main .grid .content .header {
+    font-size: 24px;
   }
 }
 /*# sourceMappingURL=style.css.map */
